--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,30 @@
     * {
         padding: 0;
-        margin: 0 auto;
+        margin: 0;
         box-sizing: border-box;
+    }
+    
+    button {
+        cursor: pointer;
+        border: none;
+        background-color: transparent;
+        font-family: inherit;
+    }
+    
+    body {
+        font-family: 'Georgia';
+    }
+    
+    img {
+        max-width: 100%;
     }
     
     .container {
         max-width: 1200px;
         padding: 0;
+        margin: auto;
     }
+    /* ---------header---------- */
     
     header {
         background: linear-gradient(90.26deg, #7D604B 0.23%, #251000 99.8%);
@@ -15,14 +32,13 @@
     
     .header-wrapper {
         display: flex;
+        flex-wrap: nowrap;
         justify-content: space-between;
         padding-top: 60px;
     }
     
     .header-wrapper__logo h2 {
         padding-bottom: 10px;
-        font-family: 'Georgia';
-        font-style: normal;
         font-weight: 400;
         font-size: 32px;
         line-height: 110%;
@@ -31,16 +47,13 @@
     
     .header-wrapper__logo p {
         font-family: 'Arial';
-        font-style: normal;
         font-weight: 400;
         font-size: 13px;
         line-height: 15px;
         color: #FFFFFF;
     }
     
-    .header-wrapper__menu {
-        padding-left: 538px;
-    }
+    .header-wrapper__menu {}
     
     .header-wrapper__menu ul li {
         display: inline-block;
@@ -50,7 +63,6 @@
     .header-wrapper__menu a {
         text-decoration: none;
         font-family: 'Arial';
-        font-style: normal;
         font-weight: 400;
         font-size: 15px;
         line-height: 160%;
@@ -61,9 +73,9 @@
         color: #FAFAFA;
         border-bottom: 3px solid #F1CDB3;
     }
+    /* -------main--------- */
     
     main {
-        padding-top: 60px;
         background: linear-gradient(90.26deg, #7D604B 0.23%, #251000 99.8%);
     }
     
@@ -79,8 +91,6 @@
     .main-wrapper__text h1 {
         max-width: 62%;
         margin: 0;
-        font-family: 'Georgia';
-        font-style: normal;
         font-weight: 400;
         font-size: 44px;
         line-height: 130%;
@@ -93,7 +103,6 @@
         padding-bottom: 41px;
         max-width: 460px;
         font-family: 'Arial';
-        font-style: normal;
         font-weight: 400;
         font-size: 15px;
         line-height: 160%;
@@ -104,8 +113,6 @@
         padding: 15px 45px;
         background: #F1CDB3;
         width: 207px;
-        font-family: 'Georgia';
-        font-style: normal;
         font-weight: 400;
         font-size: 17px;
         line-height: 130%;
@@ -124,19 +131,27 @@
     
     .section-wrapper {
         display: flex;
-        justify-content: space-between;
+        /* justify-content: space-between; */
         padding-top: 80px;
         background: #FFFFFF;
         padding-bottom: 100px;
     }
     
-    .section-wrapper__shelter {}
+    .section-wrapper__guys {
+        width: 50%;
+        text-align: center;
+    }
+    
+    .section-wrapper__guys img {
+        padding-left: 45px;
+    }
+    
+    .section-wrapper__shelter {
+        width: 50%;
+    }
     
     .section-wrapper__shelter h2 {
-        margin: 0;
         width: 320px;
-        font-family: 'Georgia';
-        font-style: normal;
         font-weight: 400;
         font-size: 35px;
         line-height: 130%;
@@ -147,7 +162,6 @@
         width: 430px;
         margin-top: 25px;
         font-family: 'Arial';
-        font-style: normal;
         font-weight: 400;
         font-size: 15px;
         line-height: 160%;
@@ -163,8 +177,6 @@
     .name {
         text-align: center;
         padding-bottom: 60px;
-        font-family: 'Georgia';
-        font-style: normal;
         font-weight: 400;
         font-size: 35px;
         line-height: 130%;
@@ -174,6 +186,8 @@
     
     .slides-wrapper {
         display: flex;
+        flex-direction: row;
+        margin-bottom: 60px;
     }
     
     .slides-wrapper__left button {
@@ -187,6 +201,7 @@
     .middle-pets {
         display: flex;
         justify-content: space-between;
+        flex-grow: 1;
     }
     
     .middle-pets .cat:hover,
@@ -197,7 +212,6 @@
     
     .middle-pets p {
         font-family: 'Georgia';
-        font-style: normal;
         font-weight: 400;
         font-size: 20px;
         line-height: 23px;
@@ -209,7 +223,6 @@
     .middle-pets a {
         text-decoration: none;
         font-family: 'Georgia';
-        font-style: normal;
         font-weight: 400;
         font-size: 17px;
         line-height: 130%;
@@ -226,17 +239,20 @@
     }
     
     .puppy {
+        max-width: 270px;
         margin-left: 90px;
         margin-right: 90px;
         background: #FAFAFA;
     }
     
     .cat {
+        max-width: 270px;
         height: 400px;
         background: #FAFAFA;
     }
     
     .dog {
+        max-width: 270px;
         background: #FAFAFA;
     }
     
@@ -251,24 +267,27 @@
     .slides-wrapper__right button:hover {
         background: #FDDCC4;
     }
-    
-    .buttom {
+    /* .buttom {
         background: #F1CDB3;
         border-radius: 100px;
         width: 261px;
         padding: 15px 45px;
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
         margin-top: 60px;
-    }
+    } */
     
     .buttom a {
         text-decoration: none;
-        font-family: 'Georgia';
-        font-style: normal;
         font-weight: 400;
         font-size: 17px;
         line-height: 130%;
         color: #292929;
+        background: #F1CDB3;
+        border-radius: 100px;
+        width: 261px;
+        padding: 15px 45px;
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+        margin-left: 36%;
     }
     
     .buttom:hover {
@@ -285,7 +304,6 @@
         margin-bottom: 5px;
         text-align: center;
         font-family: 'Georgia';
-        font-style: normal;
         font-weight: 400;
         font-size: 35px;
         line-height: 130%;
@@ -310,7 +328,6 @@
     
     .help-wrapper__link p {
         font-family: 'Georgia';
-        font-style: normal;
         font-weight: 400;
         font-size: 20px;
         line-height: 115%;
@@ -340,7 +357,6 @@
         width: 285px;
         text-align: left;
         font-family: 'Georgia';
-        font-style: normal;
         font-weight: 400;
         font-size: 35px;
         line-height: 130%;
@@ -349,8 +365,6 @@
     
     .donation-wrapper__card p {
         padding-bottom: 20px;
-        font-family: 'Georgia';
-        font-style: normal;
         font-weight: 400;
         font-size: 15px;
         line-height: 110%;
@@ -380,8 +394,6 @@
         padding-left: 45px;
         padding-top: 10px;
         padding-bottom: 10px;
-        font-family: 'Georgia';
-        font-style: normal;
         font-weight: 400;
         font-size: 20px;
         line-height: 115%;
@@ -414,8 +426,6 @@
     }
     
     footer h2 {
-        font-family: 'Georgia';
-        font-style: normal;
         font-weight: 400;
         font-size: 35px;
         line-height: 130%;
@@ -448,3 +458,17 @@
     footer a {
         color: #F1CDB3;
     }
+    
+    @media (max-width: 1230px) {
+        .container {
+            max-width: 95%;
+        }
+    }
+    /* @media (max-width: 1140px){
+        .middle-pets .dog{
+            display: none;
+        }
+        .middle-pets{
+            justify-content: space-around;
+        }
+    } */
