--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,7 @@
     /* ---------header---------- */
     
     header {
+        
         background: linear-gradient(90.26deg, #7D604B 0.23%, #251000 99.8%);
     }
     
@@ -78,6 +79,7 @@
     /* -------main--------- */
     
     main {
+      
         background: linear-gradient(90.26deg, #7D604B 0.23%, #251000 99.8%);
     }
     
@@ -463,7 +465,7 @@
         }
     }
     @media (max-width: 1100px){
-        .middle-pets .dog{
+        .middle-pets div:last-child{
             display: none;
         }
         .middle-pets{
